name:                gore-and-ash-resources
version:             0.1.0.0
synopsis:            Core module for Gore&Ash engine that do something.
description:         Please see README.md
homepage:            https://github.com/githubuser/gore-and-ash-resources#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:     
                      Game.GoreAndAsh.Resources
                      Game.GoreAndAsh.Resources.API
                      Game.GoreAndAsh.Resources.Module
                      Game.GoreAndAsh.Resources.State
  
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , deepseq >= 1.4.1.1
                    , exceptions >= 0.8.2.1
                    , gore-and-ash >= 1.1.0.1
                    , mtl >= 2.2.1
                    , unordered-containers
                    , text
                    
  default-extensions: 
                      DeriveGeneric
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      TypeFamilies
                      UndecidableInstances
                      RecordWildCards
